# smart-factory

./: README.md  flake.nix  pyproject.toml
smart_factory_extensions/: modules.py
